# microservices

./: .gitignore
authentication/: Cargo.toml
authentication/migrations/2019-10-04-000950_users/: up.sql
authentication/migrations/2019-10-06-005731_api_key/: up.sql
authentication/src/: api_key.rs  main.rs  schema.rs  user.rs
authentication/src/controllers/: api_key_controller.rs  mod.rs  user_controller.rs
authentication/src/utils/: mod.rs
permissions/: Cargo.toml
permissions/src/controllers/: root_controller.rs  user_controller.rs
permissions/src/models/: db.rs  schema.rs
permissions/src/records/: api_key.rs  mod.rs  user.rs
permissions/src/utils/: static_map.rs
pizza/: Cargo.toml
pizza/migrations/2019-09-30-012519_pizzas/: down.sql  up.sql
pizza/src/: db.rs  main.rs  pizza.rs  schema.rs
