[package]
name = "library"
version = "0.1.0"
authors = ["takashiidobe <idobetakashi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
diesel = { version = "1.4.2", features = ["r2d2", "mysql", "64-column-tables"] }
lazy_static = "1.4.0"
bcrypt = "0.6.0"
dotenv = "0.14.1"

[dependencies.rocket_contrib]
version  = "0.4.1"
features = ["json"]